--- a/header.less
+++ b/header.less
@@ -9,9 +9,16 @@
     &, & .timestamp { color: #c4c4c4; }
   }
   .bb-breadcrumbs {
-    margin-right: 5px;
-    .pull-right .bb-drive-link + .tooltip .tooltip-arrow {
-      left: auto; right: 20px;
+    padding-right: 160px;
+    height: 40px;
+    overflow: hidden;
+    .bb-drive-buttons {
+      position: absolute;
+      right: 0;
+      width: 163px;
+      .bb-drive-link + .tooltip .tooltip-arrow {
+        left: auto; right: 20px;
+      }
     }
   }
   .bb-lastupdate, .bb-lastchat {
